feat: catalog labels endpoint (#1837)
* feat: add labels endpoint WIP


* feat: first working labels endpoint


* fix: make reload work on labels


* fix: update gitattributes files


* fix: labels endpoint token and size


* feat: add more tests for the labels endpoint


* feat: make name required in labels


* fix: missing gitattribute


* fix: make test names generic


---------
