# catalog/pkg/openapi/model_catalog_label.go
@@ -1,0 +1,145 @@
+/*
+Model Catalog REST API
+
+REST API for Model Registry to create and manage ML model metadata
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the CatalogLabel type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &CatalogLabel{}
+
+// CatalogLabel A catalog label. Labels are used to categorize catalog sources. Represented as a flexible map of string key-value pairs with a required 'name' field.
+type CatalogLabel struct {
+	// The unique name identifier for the label.
+	Name                 string `json:"name"`
+	AdditionalProperties map[string]interface{}
+}
+
+type _CatalogLabel CatalogLabel
+
+// NewCatalogLabel instantiates a new CatalogLabel object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewCatalogLabel(name string) *CatalogLabel {
+	this := CatalogLabel{}
+	this.Name = name
+	return &this
+}
+
+// NewCatalogLabelWithDefaults instantiates a new CatalogLabel object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewCatalogLabelWithDefaults() *CatalogLabel {
+	this := CatalogLabel{}
+	return &this
+}
+
+// GetName returns the Name field value
+func (o *CatalogLabel) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *CatalogLabel) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *CatalogLabel) SetName(v string) {
+	o.Name = v
+}
+
+func (o CatalogLabel) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o CatalogLabel) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["name"] = o.Name
+
+	for key, value := range o.AdditionalProperties {
+		toSerialize[key] = value
+	}
+
+	return toSerialize, nil
+}
+
+func (o *CatalogLabel) UnmarshalJSON(bytes []byte) (err error) {
+	varCatalogLabel := _CatalogLabel{}
+
+	err = json.Unmarshal(bytes, &varCatalogLabel)
+
+	if err != nil {
+		return err
+	}
+
+	*o = CatalogLabel(varCatalogLabel)
+
+	additionalProperties := make(map[string]interface{})
+
+	if err = json.Unmarshal(bytes, &additionalProperties); err == nil {
+		delete(additionalProperties, "name")
+		o.AdditionalProperties = additionalProperties
+	}
+
+	return err
+}
+
+type NullableCatalogLabel struct {
+	value *CatalogLabel
+	isSet bool
+}
+
+func (v NullableCatalogLabel) Get() *CatalogLabel {
+	return v.value
+}
+
+func (v *NullableCatalogLabel) Set(val *CatalogLabel) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableCatalogLabel) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableCatalogLabel) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableCatalogLabel(val *CatalogLabel) *NullableCatalogLabel {
+	return &NullableCatalogLabel{value: val, isSet: true}
+}
+
+func (v NullableCatalogLabel) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableCatalogLabel) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
