# catalog/pkg/openapi/model_catalog_label_list.go
@@ -1,0 +1,200 @@
+/*
+Model Catalog REST API
+
+REST API for Model Registry to create and manage ML model metadata
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the CatalogLabelList type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &CatalogLabelList{}
+
+// CatalogLabelList List of CatalogLabel entities.
+type CatalogLabelList struct {
+	// Token to use to retrieve next page of results.
+	NextPageToken string `json:"nextPageToken"`
+	// Maximum number of resources to return in the result.
+	PageSize int32 `json:"pageSize"`
+	// Number of items in result list.
+	Size int32 `json:"size"`
+	// Array of `CatalogLabel` entities.
+	Items []CatalogLabel `json:"items"`
+}
+
+// NewCatalogLabelList instantiates a new CatalogLabelList object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewCatalogLabelList(nextPageToken string, pageSize int32, size int32, items []CatalogLabel) *CatalogLabelList {
+	this := CatalogLabelList{}
+	this.NextPageToken = nextPageToken
+	this.PageSize = pageSize
+	this.Size = size
+	this.Items = items
+	return &this
+}
+
+// NewCatalogLabelListWithDefaults instantiates a new CatalogLabelList object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewCatalogLabelListWithDefaults() *CatalogLabelList {
+	this := CatalogLabelList{}
+	return &this
+}
+
+// GetNextPageToken returns the NextPageToken field value
+func (o *CatalogLabelList) GetNextPageToken() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.NextPageToken
+}
+
+// GetNextPageTokenOk returns a tuple with the NextPageToken field value
+// and a boolean to check if the value has been set.
+func (o *CatalogLabelList) GetNextPageTokenOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.NextPageToken, true
+}
+
+// SetNextPageToken sets field value
+func (o *CatalogLabelList) SetNextPageToken(v string) {
+	o.NextPageToken = v
+}
+
+// GetPageSize returns the PageSize field value
+func (o *CatalogLabelList) GetPageSize() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.PageSize
+}
+
+// GetPageSizeOk returns a tuple with the PageSize field value
+// and a boolean to check if the value has been set.
+func (o *CatalogLabelList) GetPageSizeOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.PageSize, true
+}
+
+// SetPageSize sets field value
+func (o *CatalogLabelList) SetPageSize(v int32) {
+	o.PageSize = v
+}
+
+// GetSize returns the Size field value
+func (o *CatalogLabelList) GetSize() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.Size
+}
+
+// GetSizeOk returns a tuple with the Size field value
+// and a boolean to check if the value has been set.
+func (o *CatalogLabelList) GetSizeOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Size, true
+}
+
+// SetSize sets field value
+func (o *CatalogLabelList) SetSize(v int32) {
+	o.Size = v
+}
+
+// GetItems returns the Items field value
+func (o *CatalogLabelList) GetItems() []CatalogLabel {
+	if o == nil {
+		var ret []CatalogLabel
+		return ret
+	}
+
+	return o.Items
+}
+
+// GetItemsOk returns a tuple with the Items field value
+// and a boolean to check if the value has been set.
+func (o *CatalogLabelList) GetItemsOk() ([]CatalogLabel, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Items, true
+}
+
+// SetItems sets field value
+func (o *CatalogLabelList) SetItems(v []CatalogLabel) {
+	o.Items = v
+}
+
+func (o CatalogLabelList) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o CatalogLabelList) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["nextPageToken"] = o.NextPageToken
+	toSerialize["pageSize"] = o.PageSize
+	toSerialize["size"] = o.Size
+	toSerialize["items"] = o.Items
+	return toSerialize, nil
+}
+
+type NullableCatalogLabelList struct {
+	value *CatalogLabelList
+	isSet bool
+}
+
+func (v NullableCatalogLabelList) Get() *CatalogLabelList {
+	return v.value
+}
+
+func (v *NullableCatalogLabelList) Set(val *CatalogLabelList) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableCatalogLabelList) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableCatalogLabelList) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableCatalogLabelList(val *CatalogLabelList) *NullableCatalogLabelList {
+	return &NullableCatalogLabelList{value: val, isSet: true}
+}
+
+func (v NullableCatalogLabelList) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableCatalogLabelList) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
